# swig_cpp_cs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/app_cpp/: CMakeLists.txt
examples/app_cpp/src/: app.cpp
examples/app_cs/: CMakeLists.txt  main.cs
src/: CMakeLists.txt
src/bar/: CMakeLists.txt
src/bar/bindings/: bar_cs.i
src/bar/bindings/cs/: Bar.cs  cs_bar.cs  cs_barPINVOKE.cs
src/bar/include/: bar.h  bar_export.h
src/bar/src/: bar.cpp
src/common/: CMakeLists.txt
src/common/bindings/: common_cs.i
src/common/include/: common.h  common_export.h  foobarbase.h
src/common/src/: foobarbase.cpp
src/foo/: CMakeLists.txt
src/foo/bindings/: foo_cs.i
src/foo/bindings/cs/: Foo.cs  FooBarBase.cs  cs_foo.cs  cs_fooPINVOKE.cs
src/foo/include/: foo.h
src/foo/src/: foo.cpp
